Smart Lock: Deep link 'Chromebook added' notification to new settings page

R=jhawkins@chromium.org

TBR=jhawkins@chromium.org

Bug: 873310
Change-Id: Ie0e9a8ef43c890666b39e4f188d9ba156295c7e8
Reviewed-on: https://chromium-review.googlesource.com/c/1277866
Commit-Queue: Ryan Hansberry <hansberry@chromium.org>
Reviewed-by: Jeremy Klein <jlklein@chromium.org>
Cr-Commit-Position: refs/heads/master@{#598919}