chrome/browser/chromeos/login/easy_unlock/easy_unlock_notification_controller.cc
@@ -11,6 +11,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "chrome/browser/ui/chrome_pages.h"
 #include "chrome/grit/generated_resources.h"
 #include "chrome/grit/theme_resources.h"
+#include "chromeos/chromeos_features.h"
 #include "chromeos/components/proximity_auth/screenlock_bridge.h"
 #include "ui/base/l10n/l10n_util.h"
 #include "ui/base/resource/resource_bundle.h"
@@ -34,6 +35,7 @@ const char kEasyUnlockPromotionNotifierId[] =
     "easyunlock_notification_ids.promotion";
 
 const char kLockScreenSettingsSubpage[] = "lockScreen";
+const char kSmartLockSettingsSubpage[] = "multidevice/features/smartLock";
 
 // Convenience function for creating a Notification.
 std::unique_ptr<message_center::Notification> CreateNotification(
@@ -155,7 +157,11 @@ void EasyUnlockNotificationController::ShowNotification(
 }
 
 void EasyUnlockNotificationController::LaunchEasyUnlockSettings() {
-  chrome::ShowSettingsSubPageForProfile(profile_, kLockScreenSettingsSubpage);
+  chrome::ShowSettingsSubPageForProfile(
+      profile_, base::FeatureList::IsEnabled(
+                    chromeos::features::kEnableUnifiedMultiDeviceSettings)
+                    ? kSmartLockSettingsSubpage
+                    : kLockScreenSettingsSubpage);
 }
 
 void EasyUnlockNotificationController::LockScreen() {
